# goodreads

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
docs/: erd.puml
envs/: app.env.example  db.env.example
src/books/: admin.py  urls.py
src/books/migrations/: 0001_initial.py  0002_bookmark.py
src/books/models/: __init__.py  book.py  bookmark.py
src/books/models/repositories/: bookmarks_repo.py  books_repo.py
src/books/services/: bookmarks_svc.py  books_svc.py
src/books/services/serializers/: books_svc_srl.py
src/books/tests/: test_books_api_list.py  test_books_api_retrieve.py
src/books/views/: bookmarks_view.py  books_view.py
src/books/views/serializers/: bookmarks_view_srl.py  books__view_srl.py  books_view_srl.py
src/goodreads/: settings.py  urls.py
src/goodreads/exceptions/: exception_handler.py
src/goodreads/utils/: pagination.py  permission.py  singleton.py  unit_test_helpers.py  validators.py
src/reviews/: admin.py  urls.py
src/reviews/migrations/: 0001_initial.py  0002_review_updated_at.py  0003_alter_review_rate.py
src/reviews/models/: __init__.py  review.py
src/reviews/models/repositories/: reviews_repo.py
src/reviews/services/: reviews_svc.py
src/reviews/views/: reviews_view.py
src/users/: admin.py  urls.py
src/users/migrations/: 0001_initial.py  0002_remove_user_users_user_credit_eaea58_idx_and_more.py
src/users/models/: user.py
src/users/services/: users_svc.py
src/users/tests/: test_users_api_signup.py  test_users_svc_signup.py
src/users/views/: users_view.py
(+9 files in other folders)
